[package]
name = "rless"
version = "0.0.5"
edition = "2018"
default-run = "rless"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/rless"
documentation = "https://docs.rs/rless"
description = "A simple pager in rust"

[dependencies]
crossterm = "0.20.0"
futures = "0.3.17"
minus = { version = "5.5.0", features = ["dynamic_output", "static_output", "search"] }
man = { version = "0.3.0", optional = true }
atty = "0.2.14"
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros", "fs", "sync", "io-util"] }
clap = { version = "4.4.6", features = [ "derive" ] }

[[bin]]
name = "man"
path = "src/build.rs"
required-features = ["build_deps"]

[features]
build_deps = ["man"]
