[package]
name = "rless"
version = "0.0.5"
edition = "2018"
default-run = "rless"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/takashiidobe/rless"
documentation = "https://docs.rs/rless"
description = "A simple pager in rust"

[dependencies]
futures = "0.3.17"
minus = { version = "5.5.1", features = ["dynamic_output", "static_output", "search"] }
man = { version = "0.3.0", optional = true }
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros", "fs", "sync", "io-util"] }
clap = { version = "4.4.6", features = [ "derive" ] }
parking_lot = "0.12.1"
anyhow = "1.0.80"

[[bin]]
name = "man"
path = "src/build.rs"
required-features = ["build_deps"]

[features]
build_deps = ["man"]
